Added container view rewrite

--- a/students/lang/fr.json
+++ b/students/lang/fr.json
@@ -1,9 +1,11 @@
 {
     "cardinal.root": "Panel",
-    "cardinal.root.cardinal": "Administration",
+    "cardinal.root.cardinal": "Etudiant",
     "cardinal.root.cardinal.groups": "Liste des groupes",
     "cardinal.root.cardinal.groups.edit": "Editer un groupe",
     "cardinal.root.cardinal.students": "Etudiants",
     "cardinal.root.cardinal.students.show": "Profil d'un étudiant",
-    "administrator": "Administrateur"
+    "administrator": "Administrateur",
+    "cardinal.root.cardinal.ssh": "Mes clés SSH",
+    "cardinal.root.cardinal.containers": "Mes conteneurs"
 }
